# computer_vision

./: README.md
3D_Reconstruction/: README.md
3D_Reconstruction/Dinosaur/: camera.py  cube_reconstruction.py  example.py  features.py  processor.py  structure.py  transformers.py
Computational_Photography/corner_detection/: harris_corners.py
Computational_Photography/feature_detection/: orb_features.py  sift_features.py
Computational_Photography/feature_matching/: feature_matching.py
Computational_Photography/image_transforms/: rotation.py  scale_shear.py  translation.py  warp_affine.py  warp_perspective.py
Computational_Photography/morphing/: morphing.py
Dense_Motion_Estimation/3D Motion Estimation/: setup.py
Dense_Motion_Estimation/Facial Landmark Detection/: README.md  landmark.py
Dense_Motion_Estimation/Head Pose Estimation/: .gitignore  README.md  estimateHeadPose.py  markDetector.py  opticalFlowTracker.py  osDetector.py  poseEstimator.py  stabilizer.py
Feature-based_Alignment/Image Alignment/: align.cpp  align.py
Feature_Detection_n_Matching/Facial Landmark Detection/: model.py
Feature_Detection_n_Matching/Oriented and Rotated/: README.md  requirements.txt
Image-based_Rendering/3D Scene/: .gitattributes  .gitignore
Image_Formation/: README.md
Image_Stitching/: README.md
People Tracking/: README.md
People Tracking/detection/detected_person_association/: CMakeLists.txt  setup.py
People Tracking/detection/detected_person_association/src/detected_person_association/: __init__.py  aggregate_detections.cpp  aggregate_detections.h  composite_detected_persons_synchronizer.cpp  composite_detected_persons_synchronizer.h  convert_to_composite_detections.cpp  convert_to_composite_detections.h  euclidean_nn_fuser.cpp  euclidean_nn_fuser.h  nn_fuser.cpp  nn_fuser.h  polar_nn_fuser.cpp  polar_nn_fuser.h
Recognition/Real-Time Object Detection/: real_time_object_detection.py
Segmentation/: segment.py
Segmentation/Semantic Segmentation/: segment_video.py
(+677 files in other folders)
